Mode locked and crash if objects become disabled in viewport while not in object mode #94633
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#94633
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux-5.15.0-2-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.86
Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-03 17:16, hash:
b7ad58b945
Worked: didn't crash but showed an error message in 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash:
5be9ef4177
Short description of error
Objects that are in a mode which is not Edit Mode nor Object Mode, will lock the mode setting (so the mode options are greyed out and unusable) if they get disabled in the viewport. Hiding will not cause the this bug, it needs to be disabled in viewport using that display icon in the outliner, not the eye.
The solution for this is probably to make the disable in viewport action switch the mode to object mode if the active objects gets removed (much like delete from outliner). Another solution would be to still allow the mode switch.
Much worse though! Blender crashes sometimes when it gets into this state. I can reliably crash blender as described below.
Exact steps for others to reproduce the error
Go into weightpaint mode of the default cube and disable it in the viewport using the outliner (you need to enable the option first). Now you are stuck and have to enable it in the viewport first to be able to edit anything.
Now restart blender etc. and try this:
Added subscriber: @HDMaster84
#95459 was marked as duplicate of this issue
Added subscriber: @iss
Changed status from 'Needs Triage' to: 'Confirmed'
Can confirm locked modes and crash on NULL dereference
Added subscribers: @Zcyber, @PratikPB2123
This issue was referenced by
066bf316ce
This issue was referenced by
cb39058f2f
Changed status from 'Confirmed' to: 'Resolved'
I am the person who reported this glitch, it is said that it's solved, but it still happens in latest Blender version 3.2.2. Please check it again.
When object has at least one shape key, same glitch happens.
For example there is a cube, and it has a shape key and I select this cube and activate sculpt mode and hide it using "Disable in Viewports" after that move mouse cursor to 3D view port, then Blender crashes.
I checked crash log and it says
Exception Record:
ExceptionCode : EXCEPTION_ACCESS_VIOLATION
Exception Address : 0x00007FF791F64EAD
Exception Module : blender.exe
Exception Flags : 0x00000000
Exception Parameters : 0x2
Parameters- [x] : 0x0000000000000000
Parameters- [x] : 0x0000000000000720
Changed status from 'Resolved' to: 'Confirmed'
Can still repro the crash